INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${NET-NG}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${LIBHASHISH}/include)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/${NET-NG}/tests)
ADD_LIBRARY(net-ng bpf.c cursor.c rx_ring_compat.c thread.c xmalloc.c netdev.c pcap.c rx_ring.c strlcpy.c hash.c system.c oui_hash.c)
TARGET_LINK_LIBRARIES(${NET-NG} ${LIBHASHISH})
#ADD_LIBRARY(net-ng tx_ring.c)
