INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/${LIBHASHISH}/include)
LINK_DIRECTORIES (${CMAKE_SOURCE_DIR}/${LIBHASHISH})

ADD_EXECUTABLE(bloom_filter_test bloom_filter_test.c)
#ADD_EXECUTABLE(concurrent_test concurrent_test.c)
ADD_EXECUTABLE(iterator_test iterator_test.c)
ADD_EXECUTABLE(memory_leak_inspector memory_leak_inspector.c)
ADD_EXECUTABLE(perfdebug perfdebug.c)
ADD_EXECUTABLE(string_distribution string_distribution.c)
ADD_EXECUTABLE(unit_test unit_test.c)

TARGET_LINK_LIBRARIES (bloom_filter_test ${LIBHASHISH})
#TARGET_LINK_LIBRARIES (concurrent_test ${LIBHASHISH})
TARGET_LINK_LIBRARIES (iterator_test ${LIBHASHISH})
TARGET_LINK_LIBRARIES (memory_leak_inspector ${LIBHASHISH})
TARGET_LINK_LIBRARIES (perfdebug ${LIBHASHISH})
TARGET_LINK_LIBRARIES (string_distribution ${LIBHASHISH})
TARGET_LINK_LIBRARIES (unit_test ${LIBHASHISH})

ENABLE_TESTING()

ADD_TEST(bloom_filter_test bloom_filter_test)
#ADD_TEST(concurrent_test concurrent_test)
ADD_TEST(iterator_test iterator_test)
ADD_TEST(perfdebug perfdebug)
ADD_TEST(string_distribution string_distribution)
ADD_TEST(unit_test unit_test)
