INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/${NET-NG}/include)
LINK_DIRECTORIES (${CMAKE_SOURCE_DIR}/${NET-NG})

ADD_EXECUTABLE(test_pf_sock test_pf_sock.c)
ADD_EXECUTABLE(test_af_sock test_af_sock.c)
ADD_EXECUTABLE(test_af6_sock test_af6_sock.c)
#ADD_EXECUTABLE(test_pcap test_pcap.c)
ADD_EXECUTABLE(test_bpf test_bpf.c)
ADD_EXECUTABLE(test_oui_hash test_oui_hash.c)
ADD_EXECUTABLE(test_tcp_port_hash test_tcp_port_hash.c)
ADD_EXECUTABLE(test_udp_port_hash test_udp_port_hash.c)
ADD_EXECUTABLE(test_ether_types_hash test_ether_types_hash.c)
ADD_EXECUTABLE(test_time_ops test_time_ops.c)
ADD_EXECUTABLE(test_ewma test_ewma.c)

TARGET_LINK_LIBRARIES (test_pf_sock ${NET-NG})
TARGET_LINK_LIBRARIES (test_af_sock ${NET-NG})
TARGET_LINK_LIBRARIES (test_af6_sock ${NET-NG})
#TARGET_LINK_LIBRARIES (test_pcap ${NET-NG})
TARGET_LINK_LIBRARIES (test_bpf ${NET-NG})
TARGET_LINK_LIBRARIES (test_oui_hash ${NET-NG})
TARGET_LINK_LIBRARIES (test_tcp_port_hash ${NET-NG})
TARGET_LINK_LIBRARIES (test_udp_port_hash ${NET-NG})
TARGET_LINK_LIBRARIES (test_ether_types_hash ${NET-NG})
TARGET_LINK_LIBRARIES (test_time_ops ${NET-NG})
TARGET_LINK_LIBRARIES (test_ewma ${NET-NG})

ADD_TEST(test_pf_sock test_pf_sock)
ADD_TEST(test_af_sock test_af_sock)
ADD_TEST(test_af6_sock test_af6_sock)
#ADD_TEST(test_pcap test_pcap)
ADD_TEST(test_bpf test_bpf -p ${CMAKE_SOURCE_DIR}/bpf/http.bpf)
ADD_TEST(test_oui_hash test_oui_hash)
ADD_TEST(test_tcp_port_hash test_tcp_port_hash)
ADD_TEST(test_udp_port_hash test_udp_port_hash)
ADD_TEST(test_ether_types_hash test_ether_types_hash)
ADD_TEST(test_time_ops test_time_ops)
ADD_TEST(test_ewma test_ewma)
